View Issue Details

IDProjectCategoryView StatusLast Update
0023425Open CASCADEOCCT:Visualizationpublic2012-11-16 13:17
ReportermivAssigned Tokgv  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product VersionUnscheduled 
Target Version6.5.4Fixed in Version6.5.4 
Summary0023425: diffimage generate OSD_Exception during execution/
Description1. Draw> diffimage B8_Linux.gif B8_Win.gif 0.01 0 1 - it's ok
2. Draw> diffimage B8_Win.gif B8_Linux.gif 0.01 0 1
An exception was caught 004F514C : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLAT
ION at address 0x05EFFEA4 during 'READ' operation
** Exception ** 004F514C : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at a
ddress 0x05EFFEA4 during 'READ' operation
TagsNo tags attached.
Test case numberbugs vis(004) CR23425

Attached Files

  • B8_Linux.gif (7,229 bytes)
  • B8_Win.gif (7,237 bytes)

Activities

miv

2012-09-10 17:35

tester  

B8_Linux.gif (7,229 bytes)

miv

2012-09-10 17:35

tester  

B8_Win.gif (7,237 bytes)

kgv

2012-09-11 09:40

developer   ~0021449

Bug is ready for review in branch CR23425.

The bug was caused by out-of-image access during border filter algorithm execution (neighbors' checks).

Dear vro, please review the patch for algorithm conformity.

vro

2012-09-11 09:49

developer   ~0021450

Reviewed!

abv

2012-09-13 08:35

manager   ~0021466

MSVC 9 compiler gives errors:

..\..\..\src\Image\Image_Diff.cxx(421) : error C2668: 'abs' : ambiguous call to overloaded function
        d:\DevTools\Vstudio\VC9\VC\include\math.h(103): could be 'int abs(int)'
        d:\DevTools\Vstudio\VC9\VC\include\math.h(485): or 'long abs(long)'
        d:\DevTools\Vstudio\VC9\VC\include\math.h(487): or 'double abs(double)'
        d:\DevTools\Vstudio\VC9\VC\include\math.h(491): or 'float abs(float)'
        d:\DevTools\Vstudio\VC9\VC\include\math.h(539): or 'long double abs(long double)'
        while trying to match the argument list '(ptrdiff_t)'

abv

2012-09-13 08:45

manager   ~0021467

MSVC 9 64-bit:

..\..\..\src\Image\Image_Diff.cxx(429) : warning C4267: 'argument' : conversion from 'size_t' to 'const Standard_Integer', possible loss of data

vro

2012-09-13 10:45

developer   ~0021469

A list of referenced articles and books from the internet is added to Image_Diff.hxx

apn

2012-09-14 16:04

administrator   ~0021491

Dear BugMaster,
Branch CR23425 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Regression:
Not detected

Improvements:
Not detected

Testing case:
bugs vis CR23425 - OK

abv

2012-09-14 17:15

manager   ~0021493

As I wrote above, the fix does not compile on 64-bit MS VC++ 9.0. Please read comments before changing status of the issue!

abv

2012-09-20 21:00

manager   ~0021524

I have pushed the fix for compilation problem on 64-bit to the new branch CR23425_1, please review.

Note that we still have compiler warnings in this code (reported above). In my opinion, the functions working with pixel positions (e.g. pixel2Int()) must be revised to use Standard_Integer instead of Standard_Size, as they in any case assume that it is int (look at their code). Another point which I dislike in this code is using plain C pointers to TColStd_MapOfInteger classes; it would be good to convert this stuff to using handles.

kgv

2012-09-21 16:53

developer   ~0021534

Patch was corrected, extended with fix for compilation error on gcc3 and pushed to the branch CR23425_2. Please test it.

mkv

2012-09-25 16:28

tester   ~0021556

MSVC 9 compiler gives errors:
http://jenkins-test-01.nnov.opencascade.com/user/mnt/my-views/view/CR23425_2/job/mnt-CR23425_2-master_build_occt_windows/2/console

mkv

2012-09-25 16:37

tester   ~0021557

Also see Parsed Console Output:
http://jenkins-test-01.nnov.opencascade.com/user/mnt/my-views/view/CR23425_2/job/mnt-CR23425_2-master_build_occt_windows/2/parsed_console/?

kgv

2012-09-25 16:52

developer   ~0021559

New compilation errors on Windows platform were fixed and pushed to CR23425_2 branch (please take updates).
Please test again.

mkv

2012-09-26 15:55

tester   ~0021569

Last edited: 2012-09-26 15:56

Dear BugMaster,
Branch CR23425_2 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Regression:
Not detected

Improvements:
Not detected

Testing case:
bugs vis(004) CR23425 - OK.

Related Changesets

occt: master 185e6ec0

2012-09-27 08:43:54

kgv

Details Diff
0023425: diffimage generate OSD_Exception during execution

diffimage out-of-image access during border filter execution

Verify neighbor pixel position for out-of-image access
A list of referenced articles and books is added to Image_Diff.hxx file.

Adding test case bugs/vis/CR23425

Image_Diff - fix compilation error on x86_64 target using msvc
There no std::abs for ptrdiff_t in Microsoft STL implementation

Image_PixMap - fixed compilation on gcc 3

Removed extra newlines in TCL script
Image_Diff, move back extra modifications
Affected Issues
0023425
mod - src/Image/Image_Diff.cxx Diff File
mod - src/Image/Image_Diff.hxx Diff File
mod - src/Image/Image_PixMap.cxx Diff File
add - tests/bugs/vis/CR23425 Diff File

Issue History

Date Modified Username Field Change
2012-09-10 16:11 miv New Issue
2012-09-10 16:11 miv Assigned To => san
2012-09-10 16:15 miv Assigned To san => miv
2012-09-10 17:06 miv Summary diffimag => diffimage generate OSD_exeption during execution/
2012-09-10 17:06 miv Description Updated
2012-09-10 17:35 miv File Added: B8_Linux.gif
2012-09-10 17:35 miv File Added: B8_Win.gif
2012-09-10 17:36 miv Assigned To miv => san
2012-09-10 17:37 miv Summary diffimage generate OSD_exeption during execution/ => diffimage generate OSD_Exception during execution/
2012-09-10 22:34 abv Assigned To san => kgv
2012-09-10 22:34 abv Status new => assigned
2012-09-11 09:40 kgv Note Added: 0021449
2012-09-11 09:40 kgv Assigned To kgv => vro
2012-09-11 09:40 kgv Status assigned => resolved
2012-09-11 09:49 vro Note Added: 0021450
2012-09-11 09:49 vro Assigned To vro => mkv
2012-09-11 09:49 vro Status resolved => reviewed
2012-09-13 08:35 abv Note Added: 0021466
2012-09-13 08:45 abv Note Added: 0021467
2012-09-13 10:45 vro Note Added: 0021469
2012-09-14 16:04 apn Note Added: 0021491
2012-09-14 16:05 apn Test case number => bugs vis CR23425
2012-09-14 16:05 apn Assigned To mkv => bugmaster
2012-09-14 16:05 apn Status reviewed => tested
2012-09-14 17:15 abv Note Added: 0021493
2012-09-14 17:15 abv Assigned To bugmaster => abv
2012-09-14 17:15 abv Status tested => assigned
2012-09-20 21:00 abv Note Added: 0021524
2012-09-20 21:00 abv Assigned To abv => kgv
2012-09-20 21:00 abv Status assigned => resolved
2012-09-21 16:53 kgv Note Added: 0021534
2012-09-21 16:53 kgv Assigned To kgv => bugmaster
2012-09-21 16:53 kgv Status resolved => reviewed
2012-09-21 18:34 mkv Assigned To bugmaster => mkv
2012-09-25 16:28 mkv Note Added: 0021556
2012-09-25 16:29 mkv Assigned To mkv => kgv
2012-09-25 16:29 mkv Status reviewed => assigned
2012-09-25 16:37 mkv Note Added: 0021557
2012-09-25 16:49 kgv Status assigned => resolved
2012-09-25 16:52 kgv Note Added: 0021559
2012-09-25 16:52 kgv Assigned To kgv => mkv
2012-09-25 16:52 kgv Status resolved => reviewed
2012-09-26 15:55 mkv Note Added: 0021569
2012-09-26 15:56 mkv Note Edited: 0021569
2012-09-26 15:56 mkv Test case number bugs vis CR23425 => bugs vis(004) CR23425
2012-09-26 15:56 mkv Assigned To mkv => bugmaster
2012-09-26 15:56 mkv Status reviewed => tested
2012-09-27 11:55 bugmaster Target Version => 6.5.4
2012-10-01 13:30 kgv Changeset attached => occt master 185e6ec0
2012-10-01 13:30 kgv Assigned To bugmaster => kgv
2012-10-01 13:30 kgv Status tested => verified
2012-10-01 13:30 kgv Resolution open => fixed
2012-11-16 13:14 bugmaster Fixed in Version => 6.5.4
2012-11-16 13:17 bugmaster Status verified => closed